# Fire-Spread-Simulation

./: .gitignore  CELLULAR_AUTOMATA_FIXES.md  HOW_TO_SEE_CHANGES.md  QUICK_TEST_GUIDE.md  README.md  TERRAIN_EXTRACTION_DEBUG.md  TERRAIN_FIXES_SUMMARY.md  TERRAIN_PROPERTIES_GUIDE.md  main.py  pyproject.toml
3d-forest-fire-simulation/src/: main_3d.py  main_offscreen.py  main_software3d.py  main_voxel.py  test_graphics.py
CA-implementation/: description_doc.md
CA-implementation/simulation/: cellular_automata.py  fire_model.py
CA_implementation/: main.py
CA_implementation/utils/: config.py
Datasets/: LULC-script.py  uttarakhand_era5.nc  view_era-ds.py
Demo-app/: README.md  app.py  requirements.txt  start.sh
Demo-app/api/: enhanced_simulation_api.py  map_api.py  terrain_api.py
Demo-app/core/: cellular_automata_engine.py
Demo-app/services/: map_tile_service.py  terrain_service.py
Demo-app/templates/: index.html  test.html
TerrianExtract/: main.py  map_output.html  pyproject.toml  test.ipynb
pre-demo tests/: pyproject.toml
pre-demo tests/3d-forest-fire-simulation/: README_3D_VERSIONS.md  requirements.txt
pre-demo tests/3d-forest-fire-simulation/src/: main.py  main_headless.py  main_open3d.py  main_opengl.py
pre-demo tests/3d-forest-fire-simulation/src/graphics/: __init__.py  renderer_3d.py
pre-demo tests/3d-forest-fire-simulation/src/simulation/: __init__.py  fire_model.py
pre-demo tests/CA_implementation/graphics/: renderer.py
pre-demo tests/CA_implementation/simulation/: fire_model.py
pre-demo tests/Datasets/: ERA5.py
pre-demo tests/TerrianExtract/: extract.py  main.py
web-fire-app/: Dockerfile  README.md  app.py  demo.py  requirements.txt  run.sh  setup.py
web-fire-app/api/: map_api.py  simulation_api.py  terrain_api.py
web-fire-app/core/: config.py  fire_engine.py
web-fire-app/services/: map_tile_service.py  terrain_service.py  vector_tile_service.py  (+1 more)
(+13 files in other folders)
