[project]
name = "fire-spread-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.9.1",
    "flask==2.3.3",
    "flask-cors==4.0.0",
    "folium==0.14.0",
    "geopandas==0.14.1",
    "geopy==2.4.0",
    "gunicorn==21.2.0",
    "matplotlib==3.7.2",
    "netcdf4>=1.6.5",
    "numpy<2",
    "opencv-python==4.8.1.78",
    "pillow==10.0.1",
    "rasterio==1.3.9",
    "requests==2.31.0",
    "scikit-image==0.21.0",
    "selenium==4.15.2",
    "shapely==2.0.2",
    "webdriver-manager==4.0.1",
    "xarray==2023.9.0",
]
