[project]
name = "terrianextract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "earthengine-api>=1.5.20",
    "folium>=0.20.0",
    "geemap>=0.35.3",
    "geopandas>=1.1.0",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.0.0",
    "ipykernel>=6.29.5",
    "ipynb>=0.5.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "pillow>=11.2.1",
    "planetary-computer>=1.0.0",
    "pygame>=2.6.1",
    "pystac-client>=0.8.6",
    "rioxarray>=0.19.0",
    "selenium>=4.33.0",
    "shapely>=2.1.1",
    "stackstac>=0.5.1",
    "templatrix>=0.1.1",
    "webdriver-manager>=4.0.2",
]
